// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkBarchartBar should render as an outlier 1`] = `
<g
  className="bpk-barchart__bar-group"
>
  <title>
    Bar
  </title>
  <rect
    aria-label="Bar"
    className="bpk-barchart__bar bpk-barchart__bar--outlier"
    height={100}
    onClick={undefined}
    onKeyDown={undefined}
    role={undefined}
    rx={3}
    ry={3}
    tabIndex={undefined}
    width={20}
    x={10}
    y={10}
  />
</g>
`;

exports[`BpkBarchartBar should render correctly 1`] = `
<g
  className="bpk-barchart__bar-group"
>
  <title>
    Bar
  </title>
  <rect
    aria-label="Bar"
    className="bpk-barchart__bar"
    height={100}
    onClick={undefined}
    onKeyDown={undefined}
    role={undefined}
    rx={3}
    ry={3}
    tabIndex={undefined}
    width={20}
    x={10}
    y={10}
  />
</g>
`;

exports[`BpkBarchartBar should render with an onClick handler 1`] = `
<g
  className="bpk-barchart__bar-group"
>
  <title>
    Bar
  </title>
  <rect
    aria-label="Bar"
    className="bpk-barchart__bar bpk-barchart__bar--interactive"
    height={100}
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    rx={3}
    ry={3}
    tabIndex={0}
    width={20}
    x={10}
    y={10}
  />
</g>
`;
